# bin

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  .tool-versions  404.html  Makefile  PROMPT.md  README-ES.md  README-HI.md  README-JP.md  README-ZH.md  README.md  SECURITY.md  Session.vim  VimInfo  add-groups.sh  add-user.sh  change-string.sh  change-user.sh  checkaws.py  claude.sh  clean-ssh-keys.sh  cleanup-brew.sh  cleanup.sh  conda-activate.sh  convert-hf-to-gguf.sh  create-agents-authorized-keys.sh  create-cloud.sh  create-ml-aws.sh  create-ml-fusion.sh  create-prebuild-private.sh  create-prebuild-usb.sh  create-private-prebuild.sh  create-react-app-in-docker.sh  create-ssl-request.sh  delete-google-user.sh  disk-info.sh  disk-wipe.sh  dns-flush.sh  (+348 more)
.github/workflows/: README.md  workflow.base.yaml  workflow.full.gha.yaml
.netlify/: edge-functions-import-map.json  state.json
TNE-CONTEXT/: activeContext.md  decisionLog.md  devPrompts.md  productContext.md  progress.md  systemPatterns.md
dev/: index.html
docs/: dev.md  files.md  index.md  install.md  setup.md  special.md  test.md
files/: index.html
install/: index.html
search/: search_index.json
setup/: index.html
special/: index.html
test/: index.html
